--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
   }
